# PatientMonitoring-feature-extraction-cpp

./: CMakeLists.txt  README.md  install_dependencies.sh
modules/icucockpit_libs/: CMakeLists.txt
modules/icucockpit_libs/include/: hog_descriptor.h  interest_point.h  roi_annotation.h  stip_detector.h  xml_annotation.h
modules/icucockpit_libs/src/: hog_descriptor.cpp  interest_point.cpp  roi_annotation.cpp  stip_detector.cpp  xml_annotation.cpp
modules/icucockpit_service/: CMakeLists.txt
modules/icucockpit_service/src/: main.cpp
modules/icucockpit_utils/: CMakeLists.txt
modules/icucockpit_utils/include/: debug_utils.h
modules/icucockpit_utils/src/: debug_utils.cpp
